# speech-diarizer

./: .gitignore  AUDIO_CHUNKING.md  README.md  meta.json  out.csv  pyproject.toml
scripts/: batch_format.sh  batch_process.sh  speech_chunker.sh  speech_search.sh
src/: diary_access.py
src/speech_diarizer/: __init__.py  cli.py  cli_extract.py  formatter.py  processor.py
src/speech_mine/: __init__.py  access.py  cli.py  fuzz.py  models.py
src/speech_mine/diarizer/: __init__.py  cli.py  cli_format.py  models.py  processor.py
src/speech_mine/pickaxe/: __init__.py  chunk.py  cli_chunk.py
tests/: test_chunk.py  test_diary_access.py  test_speech_fuzz.py
